# django-crud

./: README.md  manage.py  pyproject.toml
core_crud/: asgi.py  settings.py  urls.py  wsgi.py
crud_app/: models.py  urls.py  views.py
crud_app/migrations/: 0001_initial.py
crud_app/templates/: index.html  update.html
