[tool.poetry]
name = "django-crud"
version = "0.1.0"
description = ""
authors = ["Sambiase <marsamb@gmail.com>"]
readme = "README.md"
packages = [{include = "django_crud"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djlint = "^1.19.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
